--- a/codecorner.html
+++ b/codecorner.html
@@ -3,12 +3,12 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Welcome to Code Corner!</h1>
 
-  {{> hello}}
+  {{> codecorner}}
 </body>
 
-<template name="hello">
+<template name="codecorner">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
