Added a separation for the chat system

--- a/codecorner.html
+++ b/codecorner.html
@@ -6,9 +6,15 @@
   <h1>Welcome to Code Corner!</h1>
 
   {{> codecorner}}
+  {{> chat}}
 </body>
 
 <template name="codecorner">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
+</template>
+
+<template name="chat">
+  <br><hr><br>
+  <button>I wish this were a chat system</button>
 </template>
