--- a/codecorner.html
+++ b/codecorner.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <h1>Welcome to Code Corner!</h1>
+  <h1>Top page for the Code Corner!</h1>
 
   {{> codecorner}}
   {{> chat}}
@@ -15,6 +15,71 @@
 </template>
 
 <template name="chat">
-  <br><hr><br>
-  <button>I wish this were a chat system</button>
+    <div class="container">
+
+        <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <a class="brand" href="#">CodeCorner</a>
+                <ul class="nav">
+                    <li><a href="https://github.com/codeVana/codecorner" target="_blank">Source</a></li>
+                </ul>
+                <ul class="nav pull-right">
+                    <li><a>{{> loginButtons align="right"}}</a></li>
+                </ul>
+            </div>
+        </div>
+
+        {{#if currentUser}}
+        <div class="row-fluid">
+            <div class="span12 well">
+                {{> input}}
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="span8 well">
+                {{> messages}}
+            </div>
+            <div class="span4 well">
+                {{> rooms}}
+            </div>
+        </div>
+        {{else}}
+        <div class="hero-unit">
+            <h1>Welcome to CodeCorner Chat</h1>
+            <p>Please login!</p>
+        </div>
+        {{/if}}
+
+    </div>
+</template>
+
+<template name="input">
+    <input type="text" id="msg" placeholder="Your message goes here..." style="width: 50%; margin-bottom: 0px">
+    <input type="button" value="Send message" class="btn btn-primary sendMsg">
+</template>
+
+<template name="messages">
+    <h4>Room: {{roomname}}</h4>
+    <div id="messages" style="background-color: #ffffff; border: 1px solid darkgray; max-height: 200px; overflow: auto">
+        {{#each messages}}
+            {{> message}}
+        {{/each}}
+    </div>
+</template>
+
+<template name="message">
+    <p><strong>{{user}}</strong> <span style="font-size: 0.7em; color: darkgray">({{timestamp}})</span>: <i>{{msg}}</i></p>
+</template>
+
+<template name="rooms">
+    <h4>Join a room:</h4>
+    <ul>
+    {{#each rooms}}
+        {{> room}}
+    {{/each}}
+    </ul>
+</template>
+
+<template name="room">
+    <li style="cursor: pointer; {{roomstyle}}">{{roomname}}</li>
 </template>
