--- a/codecorner.html
+++ b/codecorner.html
@@ -3,20 +3,7 @@
 </head>
 
 <body>
-  <h1>Top page for the Code Corner!</h1>
-
-  {{> codecorner}}
-  {{> chat}}
-</body>
-
-<template name="codecorner">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="chat">
-    <div class="container">
-
+  <div name="container">
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <a class="brand" href="#">CodeCorner</a>
@@ -29,7 +16,25 @@
             </div>
         </div>
 
-        {{#if currentUser}}
+  {{#if currentUser}}
+    {{> codecorner}}
+    {{> chat}}
+  {{else}}
+    <div class="hero-unit">
+    <h1>Welcome to CodeCorner Chat</h1>
+    <p>Please login!</p>
+    </div>
+  {{/if}}
+
+  </div>
+</body>
+
+<template name="codecorner">
+  <button>Click Me</button>
+  <p>You've pressed the button {{counter}} times.</p>
+</template>
+
+<template name="chat">
         <div class="row-fluid">
             <div class="span12 well">
                 {{> input}}
@@ -43,14 +48,6 @@
                 {{> rooms}}
             </div>
         </div>
-        {{else}}
-        <div class="hero-unit">
-            <h1>Welcome to CodeCorner Chat</h1>
-            <p>Please login!</p>
-        </div>
-        {{/if}}
-
-    </div>
 </template>
 
 <template name="input">
