--- a/codecorner.html
+++ b/codecorner.html
@@ -24,14 +24,18 @@
   </div>
 </template>
 
-<template name="post">
+<template name="post">	
+ <div class="container">
   <h3>submit to codecorner</h3>
 
+  <form class="new-post">
+  <div class="row">
   <div class="input-field col s12">
           <input id="title" type="text">
           <label for="title">Title</label>
    </div>
-  <div class="container summernote">
+	</div>
+  <div class="summernote">
     <!--<div class="row">
     <form class="col s12">
       <div class="row">
@@ -47,11 +51,13 @@
     </form>
   </div>-->
   		<div id="summernote">
-  			Hello Summernote
+  			Write your post here
   		</div>
   </div>
     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-  </button>
+  	</button>
+  	</form>
+  	</div>
 </template>
 
 
