--- a/codecorner.html
+++ b/codecorner.html
@@ -27,37 +27,24 @@
 <template name="post">	
  <div class="container">
   <h3>submit to codecorner</h3>
-
+<h2> {{{submitted}}} </h2>
   <form class="new-post">
   <div class="row">
   <div class="input-field col s12">
           <input id="title" type="text">
           <label for="title">Title</label>
    </div>
-	</div>
+   </div>
   <div class="summernote">
-    <!--<div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="title" type="text">
-          <label for="title">Title</label>
-        </div>
-        <div class="input-field col s12">
-          <input id="text" type="text">
-          <label for="text">Text</label>
-        </div>
-      </div>
-    </form>
-  </div>-->
-  		<div id="summernote">
-  			Write your post here
-  		</div>
   </div>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <button class="btn waves-effect waves-light">Submit
   	</button>
   	</form>
+
+  	<div>
+  		{{{submitted}}}
   	</div>
+  </div>
 </template>
 
 
