added some cards to the homepage route template

--- a/codecorner.html
+++ b/codecorner.html
@@ -36,8 +36,128 @@
 </template>
 
 <template name="codecorner">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+
+<div class="row">
+<div class="col s12 m12">
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Mathematics</span>
+    </div>
+    <div class="card-content">
+      <p>This is a category for Math-related coding questions.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="row">
+<div class="col s12 m12">
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+  <div class="card small">
+    <div class="card-image">
+      <img src="/images/sample-1.jpg">
+      <span class="card-title">Card Title</span>
+    </div>
+    <div class="card-content">
+      <p>I am a very simple card. I am good at containing small bits of information.
+      I am convenient because I require little markup to use effectively.</p>
+    </div>
+    <div class="card-action">
+      <a href="#">This is a link</a>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
 </template>
 
 <template name="chatwindow">
