Use FlickR ChickTech Images

--- a/codecorner.html
+++ b/codecorner.html
@@ -121,10 +121,10 @@
 
 <template name="codecorner_item_details">
   <div class="carousel">
-   <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/800/400/food/1"></a>
-   <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/800/400/food/2"></a>
-   <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/800/400/food/3"></a>
-   <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/800/400/food/4"></a>
+   <a class="carousel-item" href="#one!"><img src="https://www.flickr.com/photos/chicktech_org/24736205131/"></a>
+   <a class="carousel-item" href="#two!"><img src="https://www.flickr.com/photos/chicktech_org/24736218481/"></a>
+   <a class="carousel-item" href="#three!"><img src="https://www.flickr.com/photos/chicktech_org/24462044669/"></a>
+   <a class="carousel-item" href="#four!"><img src="https://www.flickr.com/photos/chicktech_org/24462044669/"></a>
  </div>
  <ul class="collection">
    <li class="collection-item avatar">
