--- a/codecorner.html
+++ b/codecorner.html
@@ -1,5 +1,6 @@
 <head>
   <title>codecorner</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -86,15 +87,13 @@
 </template>
 
 <template name="codecorner_list">
-	<ol>
-	{{#each codecorners}}
-	{{>codecorner_item}}
-	{{/each}}
-	</ol>
+    {{#each codecorners}}
+    {{>codecorner_item}}
+    {{/each}}
 </template>
 
 <template name="codecorner_item">
-  <div class="col s12 m12">
+  <div class="col s12 m12 main-cardlist">
     <div class="card small">
       <div class="card-image">
         <img src="{{img}}" />
@@ -109,10 +108,10 @@
             </div>
             <div class="voting">
               <a href="#" class="btn btn-default js-upvote">
-                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                <!-- <span class="glyphicon glyphicon-arrow-up "></span> -->
               </a>
               <a href="#" class="btn btn-default js-downvote">
-                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                <!-- <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span> -->
               </a>
             </div>
         </div>
