--- a/codecorner.html
+++ b/codecorner.html
@@ -125,10 +125,9 @@
 
 <template name="codecorner_item_details">
   <div class="carousel">
-   <a class="carousel-item" href="#one!"><img src="https://www.flickr.com/photos/chicktech_org/24736205131/"></a>
-   <a class="carousel-item" href="#two!"><img src="https://www.flickr.com/photos/chicktech_org/24736218481/"></a>
-   <a class="carousel-item" href="#three!"><img src="https://www.flickr.com/photos/chicktech_org/24462044669/"></a>
-   <a class="carousel-item" href="#four!"><img src="https://www.flickr.com/photos/chicktech_org/24462044669/"></a>
+   <a class="carousel-item" href="#two!"><img src="https://farm2.staticflickr.com/1612/24736218481_a4a01d72b8_k.jpg"></a>
+   <a class="carousel-item" href="#three!"><img src="https://farm2.staticflickr.com/1612/24736218481_a4a01d72b8_k.jpg"></a>
+   <a class="carousel-item" href="#four!"><img src="https://farm2.staticflickr.com/1600/24462044669_f01c2d1093_k.jpg"></a>
  </div>
  <ul class="collection">
    <li class="collection-item avatar">
