--- a/codecorner.html
+++ b/codecorner.html
@@ -1,6 +1,5 @@
 <head>
   <title>codecorner</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -107,10 +106,11 @@
                 <div class="website_item_score"> DownScore: {{downscore}} </div>
             </div>
             <div class="voting">
-              <a href="#" class="btn btn-default js-upvote">
+              <a href="#" class="waves-effect waves-light btn js-upvote">+
+
                 <!-- <span class="glyphicon glyphicon-arrow-up "></span> -->
               </a>
-              <a href="#" class="btn btn-default js-downvote">
+              <a href="#" class="waves-effect waves-light btn js-downvote">-
                 <!-- <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span> -->
               </a>
             </div>
