--- a/codecorner.html
+++ b/codecorner.html
@@ -1,5 +1,6 @@
 <head>
-  <title>codecorner</title>
+  <title>Code Corner</title>
+  <link href='//fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -14,11 +15,11 @@
 
 
 <template name="navbar">
-  <nav>
+  <nav class="background-color-primary-3">
     <div class="nav-wrapper valign-wrapper">
-      <a href="#" class="brand-logo right">Code Corner</a>
+      <a href="#" id="brand-logo" class="brand-logo right color-primary-1 brand-font">Code Corner</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="#">{{> loginButtons}}</a></li>
+        <li><a href="#" class="color-primary-1">{{> loginButtons}}</a></li>
         <li><a href="https://github.com/codeVana/codecorner" target="_blank">Source</a></li>
       </ul>
     </div>
@@ -28,7 +29,7 @@
 <template name="welcome">
   <div class="container">
     <div class="jumbotron">
-      <h1>Welcome to Code Corner {{username}}!</h1>
+      <h1>Welcome to <span class="brand-font">Code Corner</span> {{username}}!</h1>
       <a href="/codecorner" class="btn btn-info">ENTER</a>
     </div>
   </div>
@@ -39,7 +40,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center text-lighten-2">Code Corner</h1>
+        <h1 class="header center text-lighten-2 brand-font brand-name">Code Corner</h1>
         <div class="row center">
           <h5 class="header col s12">Instructables for Code</h5>
         </div>
@@ -303,7 +304,7 @@
     {{> chat}}
   {{else}}
     <div class="hero-unit">
-    <h1>Welcome to CodeCorner Chat</h1>
+    <h1>Welcome to Code Corner Chat</h1>
     <p>Please login!</p>
     </div>
   {{/if}}
