Change card title text

--- a/codecorner.html
+++ b/codecorner.html
@@ -117,7 +117,7 @@
             </div>
         </div>
       </div>
-      <div class="card-action">
+      <div class="card-action color-primary-3">
         <a href="/codecorner/{{_id}}">{{title}}</a>
       </div>
     </div>
