--- a/codecorner.html
+++ b/codecorner.html
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="card-action">
-        <a href="/codecorner/{{_id}}">{{title}}</a> (Next ChickTECH session: {{nextChat}})
+        <a href="/codecorner/{{_id}}">{{title}}</a> (Next ChickTECH chat session: {{nextChat}})
       </div>
     </div>
   </div>
