--- a/codecorner.html
+++ b/codecorner.html
@@ -129,16 +129,11 @@
 </template>
 
 <template name="codecorner_item_details">
-  <div class="carousel">
-   <a class="carousel-item" href="#two!"><img src="https://farm2.staticflickr.com/1612/24736218481_a4a01d72b8_k.jpg"></a>
-   <a class="carousel-item" href="#three!"><img src="https://farm2.staticflickr.com/1612/24736218481_a4a01d72b8_k.jpg"></a>
-   <a class="carousel-item" href="#four!"><img src="https://farm2.staticflickr.com/1600/24462044669_f01c2d1093_k.jpg"></a>
- </div>
  <ul class="collection">
    <li class="collection-item avatar">
      <img src="images/yuna.jpg" alt="" class="circle">
      <span class="title">{{title}}</span>
-     <p>{{description}}
+     <p>{{{description}}}
      </p>
      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
    </li>
@@ -158,22 +153,6 @@
      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
    </li>
  </ul>
-
-  <div class="row">
-        <div class="col s12 m7">
-          <div class="card blue-grey large">
-            <div class="card-content white-text">
-              <h3> <span class="website_item_details_title"> {{title}} </span> </h3>
-              <p> <span class="website_item_details_description"> {{description}} </span>
-              </p>
-            </div>
-            <div class="card-action">
- <a href="{{url}}">Visit the Site for More Details </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
 </template>
 
 <template name="codecorner">
