--- a/codecorner.html
+++ b/codecorner.html
@@ -43,9 +43,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center text-lighten-2 brand-font brand-name">Code Corner</h1>
+        <h1 class="header center text-lighten-2 brand-font brand-name">Hello, this is Code Corner</h1>
         <div class="row center">
-          <h5 class="header col s12">Instructables for Code</h5>
+          <h4 class="header col s12">Instructables for Code</h4>
         </div>
         <br><br>
       </div>
