codecoder logo on top leads back to home

--- a/codecorner.html
+++ b/codecorner.html
@@ -17,7 +17,7 @@
 <template name="navbar">
   <nav class="background-color-primary-3">
     <div class="nav-wrapper valign-wrapper">
-      <a href="#" id="brand-logo" class="brand-logo right color-primary-1 brand-font">Code Corner</a>
+      <a href="codecorner" id="brand-logo" class="brand-logo right color-primary-1 brand-font">Code Corner</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="#" class="color-primary-1">{{> loginButtons}}</a></li>
         <li><a href="https://github.com/codeVana/codecorner" target="_blank">Source</a></li>
@@ -43,7 +43,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center text-lighten-2 brand-font brand-name">Hello, this is Code Corner</h1>
+        <h1 class="header center text-lighten-2 brand-font brand-name">Code Corner</h1>
         <div class="row center">
           <h4 class="header col s12">Instructables for Code</h4>
         </div>
