changed picture and color scheme

--- a/codecorner.html
+++ b/codecorner.html
@@ -50,7 +50,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="http://lorempixel.com/580/250/technics/4" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="https://pixabay.com/static/uploads/photo/2015/05/26/23/52/technology-785742_960_720.jpg" alt="Unsplashed background img 1"></div>
   </div>
 </template>
 
