--- a/codecorner.html
+++ b/codecorner.html
@@ -101,7 +101,7 @@
     <div class="card small">
       <div class="card-image">
         <img src="{{img}}" />
-        <div class="next-chat {{#if nextChatEmpty }}not-available{{/if}}">Next ChickTECH chat session: {{nextChat}}</div>
+        <!--div class="next-chat {{#if nextChatEmpty }}not-available{{/if}}">Next ChickTECH chat session: {{nextChat}}</div-->
         <!-- <span class="card-title">{{title}}</span> -->
       </div>
       <div class="card-content">
