--- a/codecorner.html
+++ b/codecorner.html
@@ -96,6 +96,7 @@
     {{/each}}
 </template>
 
+
 <template name="codecorner_item">
   <div class="col s12 m12 main-cardlist">
     <div class="card small">
@@ -109,7 +110,7 @@
         <div class="controls-wrapper">
             <div class="score">
                 <div class="website_item_score"> UpScore: {{upscore}} </div>
-                <div class="website_item_score"> DownScore: {{downscore}} </div>
+                <!--div class="website_item_score"> DownScore: {{downscore}} </div-->
             </div>
             <div class="voting">
               <a href="#" class="waves-effect waves-light btn js-upvote">+
@@ -355,6 +356,7 @@
   </div>
 </template>
 
+
 <template name="postList">
  <div class="container">
   <h3>submit to codecorner</h3>
@@ -373,3 +375,8 @@
   	</form>
   </div>
 </template>
+
+
+
+
+
