--- a/codecorner.html
+++ b/codecorner.html
@@ -19,6 +19,7 @@
   <nav class="background-color-primary-3">
     <div class="nav-wrapper valign-wrapper">
       <a href="codecorner" id="brand-logo" class="brand-logo right color-primary-3 brand-font">Code Corner</a>
+          <img src="../images/robot_logo.png" style = "width:100px;height:100px;" >
             <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="#" class="color-primary-0 navbar">{{> loginButtons}}</a></li>
         <li><a href="https://github.com/codeVana/codecorner" class = "navbar" target="_blank">Source Code</a></li>
@@ -383,10 +384,4 @@
   </div>
 </template>
 
-<<<<<<< HEAD
-=======
 
-
-
-
->>>>>>> e71ca544c41ca855a95a3ca65f669aa1aba5c1fa
