--- a/codecorner.html
+++ b/codecorner.html
@@ -17,16 +17,23 @@
 
 <template name="navbar">
   <nav class="background-color-primary-3">
-    <div class="nav-wrapper valign-wrapper">
-      <a href="codecorner" id="brand-logo" class="brand-logo right color-primary-3 brand-font">Code Corner</a>
-          <img src="../images/robot_logo.png" style = "width:100px;height:100px;" >
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="#" class="color-primary-0 navbar">{{> loginButtons}}</a></li>
-        <li><a href="https://github.com/codeVana/codecorner" class = "navbar" target="_blank">Source Code</a></li>
-        {{#if currentUser}}
-        <li><a href="/post" class="navbar">Post</a></li>
-        {{/if}}
+    <div class="nav-wrapper valign center-block">
+
+<!--valign-wrapper-->
+
+    
+      <a href="codecorner" id="brand-logo" class="logo brand-logo left color-primary-3 brand-font">Code Corner</a>
+      <img src="../images/robot_logo.png" style = "width:100px;height:100px;">
+      
+        <div class="right">
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          {{#if currentUser}}
+          <li><a href="/post" class="navbar">Post</a></li>
+          {{/if}}
+          <li><a href="https://github.com/codeVana/codecorner" class = "navbar" target="_blank">Source Code</a></li>
+          <li><a href="#" class="color-primary-0 navbar">{{> loginButtons}}</a></li>
       </ul>
+      </div>
     </div>
   </nav>
 </template>
@@ -59,7 +66,7 @@
       <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="https://pixabay.com/static/uploads/photo/2015/05/26/23/52/technology-785742_960_720.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax valign-wrapper"><img src="../images/keyboard.jpg" alt="Unsplashed background img 1"></div>
   </div>
 </template>
 
@@ -383,8 +390,3 @@
   	</form>
   </div>
 </template>
-
-<<<<<<< HEAD
-=======
-
->>>>>>> fb5d9c161dfe69f3dbf9ad013f39a6bfe87df87b
