--- a/codecorner.html
+++ b/codecorner.html
@@ -17,7 +17,7 @@
 
 <template name="navbar">
   <nav class="background-color-primary-3">
-    <div class="nav-wrapper valign center-block">
+    <div class="nav-wrapper valign-wrapper">
 
 <!--valign-wrapper-->
 
