weird white bar fixed

--- a/codecorner.html
+++ b/codecorner.html
@@ -1,7 +1,7 @@
 <head>
   <title>Code Corner</title>
   <link href='//fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" type="image/x-icon" href="../images/robot_logo.ico" />`
+  <link rel="shortcut icon" type="image/x-icon" href="../images/robot_logo.ico" />
 </head>
 
 <body>
