buttons now float to right of posts

--- a/codecorner.html
+++ b/codecorner.html
@@ -122,15 +122,15 @@
         <!-- <div class="category-title"><a href="/codecorner/{{_id}}">{{title}}</a> </div> -->
         <div class="controls-wrapper">
             <div class="score">
-                <div class="website_item_score"> UpScore: {{upscore}} </div>
+                <div class="upscore website_item_score"> UpScore: {{upscore}} </div>
                 <!--div class="website_item_score"> DownScore: {{downscore}} </div-->
             </div>
             <div class="voting">
-              <a href="#" class="waves-effect waves-light btn js-upvote">+
+              <a href="#" class="right waves-effect waves-light btn js-downvote">+
 
                 <!-- <span class="glyphicon glyphicon-arrow-up "></span> -->
               </a>
-              <a href="#" class="waves-effect waves-light btn js-downvote">-
+              <a href="#" class="right waves-effect waves-light btn js-upvote">-
                 <!-- <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span> -->
               </a>
             </div>
@@ -283,14 +283,6 @@
   </div>
 </div>
 </div>
-
-
-
-
-
-
-
-
 
 </template>
 
