--- a/codecorner.html
+++ b/codecorner.html
@@ -126,11 +126,11 @@
                 <!--div class="website_item_score"> DownScore: {{downscore}} </div-->
             </div>
             <div class="voting">
-              <a href="#" class="right waves-effect waves-light btn js-downvote">+
+              <a href="#" class="right waves-effect waves-light btn js-upvote">+
 
                 <!-- <span class="glyphicon glyphicon-arrow-up "></span> -->
               </a>
-              <a href="#" class="right waves-effect waves-light btn js-upvote">-
+              <a href="#" class="right waves-effect waves-light btn js-downvote">-
                 <!-- <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span> -->
               </a>
             </div>
