--- a/codecorner.html
+++ b/codecorner.html
@@ -2,6 +2,7 @@
   <title>Code Corner</title>
   <link href='//fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" type="image/x-icon" href="../images/robot_logo.ico" />
+
 </head>
 
 <body>
@@ -31,8 +32,11 @@
           <li><a href="/post" class="navbar">Post</a></li>
           {{/if}}
       </ul>
-      </div>
     </div>
+
+
+</div>
+
   </nav>
 </template>
 
@@ -150,14 +154,14 @@
      <span class="title">{{title}}</span>
      <p>{{{description}}}
      </p>
-     <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+     <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
    </li>
    <li class="collection-item avatar">
      <i class="material-icons circle">folder</i>
      <span class="title">Title</span>
      <p> Code goes here
      </p>
-     <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+     <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
    </li>
 
    <li class="collection-item avatar">
@@ -360,6 +364,7 @@
     </ul>
   </div>
 </template>
+
 
 
 <template name="postList">
