--- a/codecorner.html
+++ b/codecorner.html
@@ -160,45 +160,49 @@
  <div class="container">
   <div class="container">
     <h1 class="contribute"> Contribute to CodeCorner!</h1>
-    <p class="text"> CodeCorner thrives on people like you taking the time to post and contribute to the community. Thanks so much!</p>
+    <p class="text"> CodeCorner thrives on people like you taking the time to post and contribute to the community. Thanks so much!
+    Fill out the following form with the information you want to share. For optional fields, leave them empty if you have nothing to add.</p>
     <h2> {{{submitted}}} </h2>
   </div>
 
 
-  <form class="new-post postTitle">
+  <form name="newpost" class="new-post postTitle">
     <ul id="post" class="container collection">
       <li id="post" class="collection-item avatar">
         <div style="width: 90%">
           <div style="float:left">
-            Title: <input type="text" name="title" class="tftextinput"><br>
-            Categories: <input type="text" name="categories" class="tftextinput"><br>
-          
+            Title (required): <input type="text" name="title" class="tftextinput" required><br>
+            <br><br>
+
+            <span class="optionaltitles">
+            Categories (optional): <input type="text" name="categories" class="optional"><br>
+            Image Source (optional): <input type="text" name="img" class="optional"><br>
+            url (optional): <input type="text" name="url" class="optional"><br>
+            </span>
           </div>
           <div style="float:right;">
-            <img src="../images/robot_logo.png" alt="robo-logo" style="width:100px;height:100px;padding:10px">
+            <img src="../images/robot_logo.png" alt="robo-logo" style="width:250px;height:250px;padding:10px">
           </div>
         </div>
         <div style="clear:both"></div>
       </li>
 
-      <li id="post" class="collection-item avatar"> 
+      <li id="post" class="summernote collection-item avatar"> 
         <h2 class="postTitle">Description</h2>
         <p class="textarea"> Describe what your post is about here! For example, is it a community announcement? A snippet of code that you want to show the world? A tough project that you've figured out? A question you have? The possibilities are endless!</p>
-        <textarea placeholder="Type here..." name="description" class="type textarea"></textarea>
+        <textarea form="newpost" placeholder="Type here..." name="description" class="type textarea"></textarea>
        </li>
 
        <li id="post" class="collection-item avatar">
-     <!--i class="material-icons circle">folder</i-->
           <h2 class="postTitle">Code</h2>
           <p class="textarea">Insert code that is relevant to your post here! Feel free to add comments that explain it either here or in the description section above.</p>
-          <textarea placeholder="Type here..." name="code" class="type textarea"></textarea>
+          <textarea form="newpost" placeholder="Type here..." name="code" class="type textarea"></textarea>
        </li>
      </ul>
     <div class="summernote">
     </div>
     <div class="container">
       <button class="btn submit color-primary-0">Publish!</button>
- <!--input class="submit color-primary-3" type="submit" value="Publish!"-->
       <a href="codecorner" class="submit color-primary-2"> cancel </a>
     </div>
   </form>
