--- a/codecorner.html
+++ b/codecorner.html
@@ -193,7 +193,7 @@
         <textarea form="newpost" placeholder="Type here..." name="description" class="type textarea"></textarea>
        </li>
 
-       <li id="post" class="collection-item avatar">
+       <li id="post" class="summernote collection-item avatar">
           <h2 class="postTitle">Code</h2>
           <p class="textarea">Insert code that is relevant to your post here! Feel free to add comments that explain it either here or in the description section above.</p>
           <textarea form="newpost" placeholder="Type here..." name="code" class="type textarea"></textarea>
