ksdhfalsdhf Please enter the commit message for your changes. Lines starting

--- a/codecorner.html
+++ b/codecorner.html
@@ -202,7 +202,7 @@
     <div class="summernote">
     </div>
     <div class="container">
-      <button class="btn submit color-primary-0">Publish!</button>
+      <button class="btn submit color-primary-1 new-post">Publish!</button>
       <a href="codecorner" class="submit color-primary-2"> cancel </a>
     </div>
   </form>
@@ -364,12 +364,12 @@
 
 <!--forum page-->
 
-<template name="rooms" id = "forum">
-<div id="forum">
+<template name="rooms">
+<div>
     <table>
     <tbody>
     <tr >
-    <th style="padding-left:0 underline">Forums</th>
+    <th style="padding-left:0" id="forum">Forums</th>
     <th style="padding-right:20">Posts</th>
     <th style="padding-right:0">Replies</th>
     </tr>
