posting now publishes to the front page

--- a/codecorner.html
+++ b/codecorner.html
@@ -187,20 +187,19 @@
         <div style="clear:both"></div>
       </li>
 
-      <li id="post" class="summernote collection-item avatar"> 
+      <li id="post" class="collection-item avatar"> 
         <h2 class="postTitle">Description</h2>
         <p class="textarea"> Describe what your post is about here! For example, is it a community announcement? A snippet of code that you want to show the world? A tough project that you've figured out? A question you have? The possibilities are endless!</p>
-        <textarea form="newpost" placeholder="Type here..." name="description" class="type textarea"></textarea>
+        <textarea id="description" form="newpost" placeholder="Type here..." name="description" class="type textarea"></textarea>
        </li>
 
-       <li id="post" class="summernote collection-item avatar">
+       <li id="post" class="collection-item avatar">
           <h2 class="postTitle">Code</h2>
           <p class="textarea">Insert code that is relevant to your post here! Feel free to add comments that explain it either here or in the description section above.</p>
-          <textarea form="newpost" placeholder="Type here..." name="code" class="type textarea"></textarea>
+          <textarea id="code" form="newpost" placeholder="Type here..." name="code" class="type textarea"></textarea>
+
        </li>
      </ul>
-    <div class="summernote">
-    </div>
     <div class="container">
       <button class="btn submit color-primary-0">Publish!</button>
       <a href="codecorner" class="submit color-primary-2"> cancel </a>
