--- a/codecorner.html
+++ b/codecorner.html
@@ -31,6 +31,7 @@
           {{#if currentUser}}
           <li><a href="/post" class="navbar">Post</a></li>
           <li><a href="/forum" class="navbar">Forum</a></li>
+          <li><a href="/yourposts" class="navbar">Your Posts</a></li>
           {{/if}}
       </ul>
     </div>
@@ -115,11 +116,10 @@
 </template>
 
 <template name="yourposts">
-{{#if currentUser== {{owner}}
+<!--{{_.isEqual owner currentUser}}-->
   {{#each codecorners}}
     {{>codecorner_item}}
-    {{/each}} 
-{{/if}}
+  {{/each}} 
 </template>
 
 <template name="codecorner_item">
@@ -454,7 +454,10 @@
       <div style="width: 90%">
         <div style="float:left">
           <h2 class="brand-font">{{{title}}}</h2>
-          <h2 class="postTitle">Categories: {{categories}}</h2>
+
+          <p class="info">Author: {{username}}</p>
+          <p class="info">Date Created: {{createdOn}}</p>
+          <p class="info">Categories: {{categories}}</p>
         </div>
         <div style="float:right;">
           <img src="{{ img }}" alt="picture" style="width:250px;height:250px;padding:10px">
