--- a/codecorner.html
+++ b/codecorner.html
@@ -371,7 +371,7 @@
 <!--forum page-->
 
 <template name="rooms" id = "forum">
-<div id="forum">
+<!--div id="forum">
     <table>
     <tbody>
     <tr >
@@ -390,7 +390,7 @@
     </table>
     <input type="text" id="newroom" placeholder="New Forum" style="width: 20%; margin-bottom: 0px">
     <input type="button" value="Create it!" class="btn btn-default createRoom">
-    </div>
+    </div-->
 </template>
 
 
