--- a/codecorner.html
+++ b/codecorner.html
@@ -379,28 +379,6 @@
 
 </div>
 </template>
-<template name="rooms" id = "forum">
-<!--div id="forum">
-    <table>
-    <tbody>
-    <tr >
-    <th style="padding-left:0 underline">Forums</th>
-    <th style="padding-right:20">Posts</th>
-    <th style="padding-right:0">Replies</th>
-    </tr>
-    <tr>
-    <td> 
-    {{#each rooms}}
-        {{> room}}
-    {{/each}}
-    </td>
-    </tr>
-    </tbody>
-    </table>
-    <input type="text" id="newroom" placeholder="New Forum" style="width: 20%; margin-bottom: 0px">
-    <input type="button" value="Create it!" class="btn btn-default createRoom">
-    </div-->
-</template>
 
 <template name="room" id="forum">
     <li style="cursor: pointer; {{roomstyle}}">{{roomname}}</li>
@@ -426,9 +404,9 @@
     
 </template>
 
-<template name="question_page">
+<!--template name="question_page">
 <p><strong> {{msg}}</strong> </p>
-</template>
+</template-->
 
 <template name="message" id="forum">
     <p><strong></strong>{{user}}<span style="font-size: 0.7em; color: darkgray">({{timestamp}})</span>: <i>{{msg}}</i></p>
@@ -441,6 +419,7 @@
     {roomname}
     </div>
     </template>
+
 
 <!--forum page-->
 <template name="rooms">
